objects/MedProSC__Value_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>MedProSC__Is_Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MedProSC__MedPro_Data_Mapping_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MedPro Data Mapping Detail</label>
        <referenceTo>MedProSC__MedProSOMappingDetail__c</referenceTo>
        <relationshipName>Value_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MedProSC__MedPro_Value__c</fullName>
        <label>MedPro Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__Target_Value__c</fullName>
        <label>Target Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>MedPro Value Mapping</label>
    <nameField>
        <displayFormat>VM-{000000}</displayFormat>
        <label>Value Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MedPro Value Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>